--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,27 @@
+alembic==1.5.6
 autopep8==1.5.5
 certifi==2020.12.5
 click==7.1.2
 flake8==3.8.4
 Flask==1.1.2
+Flask-Migrate==2.7.0
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.4.4
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.3
+Mako==1.1.4
 MarkupSafe==1.1.1
 mccabe==0.6.1
 pip==21.0.1
+psycopg2==2.8.6
 pycodestyle==2.6.0
 pyflakes==2.2.0
 pymongo==3.11.3
+python-dateutil==2.8.1
+python-editor==1.0.4
+six==1.15.0
+SQLAlchemy==1.3.23
 toml==0.10.2
 Werkzeug==1.0.1
 wheel==0.36.2
