--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask-Login==0.5.0
 Flask-Migrate==2.7.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.3
@@ -27,3 +28,4 @@ toml==0.10.2
 Werkzeug==1.0.1
 wheel==0.36.2
 wincertstore==0.2
+WTForms==2.3.3
